# ot-harjoitustyo

./: AI-yhteistyo.txt  CHANGELOG_last.md  CREATE_TABLES_sounds_v4.sql  CREATE_TABLES_soundslite_v1.sql  QUICK_START_v2.md  README.md  SETUP_GUIDE_v2.md  poetry_path.txt  pyenv_commands.txt  pyproject.toml  test_import.py  test_imports_detailed.py  ubuntu_setup.sh
config/: dietary_templates.conf
dokumentaatio/: ACTIVITY_DROPDOWN_FIX.md  ADMIN_IMPROVEMENTS.md  ADMIN_LOGOUT_FIX.md  ADMIN_STUB_SIZE_FIX.md  BUG_FIXES_PERIOD_UI.md  BUG_FIXES_SESSION_2.md  BUG_FIXES_SESSION_2B.md  BUG_FIXES_SESSION_3.md  DASHBOARD_INPUTS_MODE.md  DELIVERY_READY.md  DIETARY_PERIOD_TRACKING.md  DOCUMENTATION_SUMMARY.md  FINALIZATION_CHECKLIST.md  FINAL_BUG_FIXES.md  FINAL_SESSION_SUMMARY.md  FONT_STANDARDIZATION.md  FONT_UPDATES_PERIOD_VIEW.md  IMPLEMENTATION_STATUS.md  MVP_RELEASE_PLAN_v2_1.md  NAMING_CONVENTIONS.md  NAMING_UPDATE_SUMMARY.md  NEW_FEATURES_v2.2.md  POETRY_INVOKE_GUIDE.md  POETRY_INVOKE_WORKFLOW.md  PYTHON_VERSION_UPDATE.md  RELEASE_NOTES_v2.1.md  RESTART_INSTRUCTIONS.md  STATISTICS_IMPLEMENTATION_GUIDE.md  STATISTICS_QUICK_REFERENCE.md  UBUNTU_DEMO_CHECKLIST.md  UBUNTU_DEMO_QUICK_REFERENCE.md  UBUNTU_INSTALLATION.md  UBUNTU_INSTALLATION_v1.md  UBUNTU_TESTING_SUMMARY.md  UI_ENHANCEMENTS_PERIODS.md  UI_IMPLEMENTATION_COMPLETE.md  UI_IMPROVEMENTS_QUICK_SUMMARY.md  UI_IMPROVEMENTS_SESSION_2.md  UI_STATUS_AND_PLAN.md  UI_UPDATES_COMPLETE.md  (+24 more)
laskarit/: viikko1.md  viikko2.md
src/: DataMngr_and_StagePlanner_v1.py  Laihdutanyt_v1.py  aggregate_activities_totals.py  create_db.py  (+11 more)
(+45 files in other folders)
